[package]
name = "SourceCodeTutorial"
version = "0.1.0"
authors = ["ShyanJMC <nothing_to_show@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

### This is a dependencie, which will be downloaded from crates.io in that specific version.
[dependencies]
rand = "0.4.0"


### This is the alias.
[profile.release]
panic = 'abort'
